--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>19111837-23cd-43d2-966e-bbca31691f79</ProjectGuid>
+    <ProjectGuid>{7E0AA195-1B05-4756-9C14-DD862C99E1B7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NeuronalNetworks.Gui</RootNamespace>
@@ -53,6 +53,7 @@
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
