--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>0b3773db-4916-4733-b70e-7474f853564d</ProjectGuid>
+    <ProjectGuid>{2319909F-F702-4B75-AA54-069681460DFA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NeuronalNetworks</RootNamespace>
