--- a/src/NeuronalNetworks/NeuronalNetworks.App/NeuronalNetworks.App.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks.App/NeuronalNetworks.App.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NeuronalNetworks\NeuronalNetworks.csproj">
+      <Project>{2319909F-F702-4B75-AA54-069681460DFA}</Project>
+      <Name>NeuronalNetworks</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
