--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -43,8 +43,8 @@
     <Compile Include="ActivationFunctions\ActivationFunction.cs" />
     <Compile Include="ActivationFunctions\SigmoidFunction.cs" />
     <Compile Include="ActivationFunctions\ThresholdFunction.cs" />
-    <Compile Include="ActivationFunctions\Common\DoubleRange.cs" />
-    <Compile Include="ActivationFunctions\Common\IntRange.cs" />
+    <Compile Include="Common\DoubleRange.cs" />
+    <Compile Include="Common\IntRange.cs" />
     <Compile Include="Layers\ActivationLayer.cs" />
     <Compile Include="Layers\Layer.cs" />
     <Compile Include="Networks\ActivationNetwork.cs" />
@@ -52,6 +52,7 @@
     <Compile Include="Neurons\ActivationNeuron.cs" />
     <Compile Include="Neurons\Neuron.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Common\NeuronalNetworkSerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
