--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -46,10 +46,16 @@
     <Compile Include="Common\DoubleRange.cs" />
     <Compile Include="Common\IntRange.cs" />
     <Compile Include="Layers\ActivationLayer.cs" />
+    <Compile Include="Layers\KohonenLayer.cs" />
     <Compile Include="Layers\Layer.cs" />
+    <Compile Include="Learning\IUnSupervisedLearning.cs" />
+    <Compile Include="Learning\ISupervisedLearning.cs" />
+    <Compile Include="Learning\SOMLearning.cs" />
     <Compile Include="Networks\ActivationNetwork.cs" />
+    <Compile Include="Networks\KohonenNetwork.cs" />
     <Compile Include="Networks\Network.cs" />
     <Compile Include="Neurons\ActivationNeuron.cs" />
+    <Compile Include="Neurons\KohonenNeuron.cs" />
     <Compile Include="Neurons\Neuron.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\NeuronalNetworkSerializer.cs" />
