--- a/src/NeuronalNetworks/NeuronalNetworks.Tests/NeuronalNetworks.Tests.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks.Tests/NeuronalNetworks.Tests.csproj
@@ -48,6 +48,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KohonenTest.cs" />
     <Compile Include="LogicFunctionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -76,6 +77,7 @@
     <Content Include="Resources\and.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Resources\kohonen_ikonki.xml" />
     <Content Include="Resources\xor.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
