--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
@@ -55,10 +55,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LearningWindow.xaml.cs">
+      <DependentUpon>LearningWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RunWindow.xaml.cs">
       <DependentUpon>RunWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\WeightViewModel.cs" />
+    <Page Include="LearningWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
