Grossberg + CP / no gui

--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -51,12 +51,18 @@
     <Compile Include="Distance\OneDimensionalNeighborhood.cs" />
     <Compile Include="Distance\TwoDimensionalNeighborhood.cs" />
     <Compile Include="Layers\ActivationLayer.cs" />
+    <Compile Include="Layers\GrossbergLayer.cs" />
     <Compile Include="Layers\KohonenLayer.cs" />
     <Compile Include="Layers\Layer.cs" />
+    <Compile Include="Learning\CounterPropagationLearning.cs" />
+    <Compile Include="Learning\DeltaRuleLearning.cs" />
     <Compile Include="Learning\IUnSupervisedLearning.cs" />
     <Compile Include="Learning\ISupervisedLearning.cs" />
+    <Compile Include="Learning\SOMLayerLearning.cs" />
     <Compile Include="Learning\SOMLearning.cs" />
+    <Compile Include="Learning\WidrowHoffLearning.cs" />
     <Compile Include="Networks\ActivationNetwork.cs" />
+    <Compile Include="Networks\CounterPropagationNetwork.cs" />
     <Compile Include="Networks\KohonenNetwork.cs" />
     <Compile Include="Networks\Network.cs" />
     <Compile Include="Neurons\ActivationNeuron.cs" />
