--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivationFunctions\ActivationFunction.cs" />
+    <Compile Include="ActivationFunctions\LinearFunction.cs" />
     <Compile Include="ActivationFunctions\SigmoidFunction.cs" />
     <Compile Include="ActivationFunctions\ThresholdFunction.cs" />
     <Compile Include="Common\DoubleRange.cs" />
