--- a/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks.Gui/NeuronalNetworks.Gui.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BPLearningWindow.xaml.cs">
+      <DependentUpon>BPLearningWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CPLearningWindow.xaml.cs">
       <DependentUpon>CPLearningWindow.xaml</DependentUpon>
     </Compile>
@@ -65,6 +68,10 @@
       <DependentUpon>RunWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\WeightViewModel.cs" />
+    <Page Include="BPLearningWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="CPLearningWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
