--- a/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
+++ b/src/NeuronalNetworks/NeuronalNetworks/NeuronalNetworks.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Layers\KohonenLayer.cs" />
     <Compile Include="Layers\Layer.cs" />
     <Compile Include="Learning\BackPropagationLearning.cs" />
+    <Compile Include="Learning\BackPropagationLearning2.cs" />
     <Compile Include="Learning\CounterPropagationLearning.cs" />
     <Compile Include="Learning\DeltaRuleLearning.cs" />
     <Compile Include="Learning\IUnSupervisedLearning.cs" />
